<resources>
    <string name="app_name">Spotlight</string>
    <string name="title_new_movies">New Movies</string>
    <string name="title_library">Library</string>
    <string name="title_movieDetails">Details</string>
    <string name="title_bottom_navigation_new">New</string>
    <string name="title_bottom_navigation_library">Library</string>
    <string name="title_bottom_navigation_search">Search</string>

    <!--NewMovies-->
    <string name="dialog_error_authentication_title">Authentication Error</string>
    <string name="dialog_error_authentication_message">Could not authenticate with api key. Please check if your api key is valid. The app will be closed now.</string>
    <string name="dialog_error_network_title">Network Error</string>
    <string name="dialog_error_network_message">It looks like you are offline. Please check your network connection and try again.</string>
    <string name="dialog_error_network_button_retry">Retry</string>
    <string name="dialog_error_title">Unknown Error</string>
    <string name="dialog_error_message">An unknown error occurred. Please notify the maintainer of the app. The app will be closed now.</string>

    <!--LibraryMovies-->
    <string name="dialog_wrong_operation_title">Unknown Error</string>
    <string name="dialog_wrong_operation_message">An unknown error occurred. Please notify the maintainer of the app. The app will be closed now.</string>
    <string name="dialog_delete_movie_title">Remove Movie</string>
    <string name="dialog_delete_movie_message">Do you want to remove this movie from your library?</string>
    <string name="empty_library">There are no movies in your library</string>
    <string name="header_library">My Movies</string>

    <!--MovieDetail-->
    <string name="movie_detail_overview_headline">Story</string>
    <string name="movie_detail_runtime">%1$d min</string>
    <string name="movie_detail_headline_cast">Cast</string>
    <string name="movie_detail_headline_reviews">Reviews</string>
    <string name="movie_detail_cast_character">as %1$s</string>
    <string name="movie_detail_cast_character_unknown">Unknown</string>

    <!--Search-->
    <string name="search_search_view_hint">Search for a movie</string>
    <string name="search_initial_state">Search Movies</string>
    <string name="search_no_results_state">No Movies Found</string>
    <string name="header_new_movies">New Movies</string>

    <!--CastDetail-->
    <string name="cast_detail_birthplace">From:</string>
    <string name="cast_detail_bio_headline">Biography</string>
    <string name="cast_detail_known_for_headline">Known For</string>
    <string name="cast_detail_known_for_character">as %1$s</string>
    <string name="cast_detail_birthday">Born:</string>
    <string name="cast_detail_deathday">Died:</string>
    <string name="cast_detail_age">(age %1$s)</string>
    <string name="cast_detail_age_dead">(at age %1$s)</string>

</resources>
